# coffee_shop

./: README.md  db.sqlite3  index.html  local_ci.sh  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  sample.md  setup.md
.github/workflows/: test.yml
coffee_shop/: apps.py  auter_schema.py  manage.py  seed_data.py
coffee_shop/coffee_shop/container/: __init___.py  consumer_model.py  models.py  product_type_model.py
coffee_shop/coffee_shop/repositories/: abstractrepository.py  consumerrepository.py  deliveryrepository.py  productrepository.py  producttyperepository.py  salesinforepository.py  salesperiodRepository.py  sliprepositories.py
coffee_shop/container/: abstract_model.py  consumer_model.py  delivery_model.py  master_factory.py  models.py  product_model.py  product_type_model.py  sale_period_model.py  sales_info_model.py  slip_model.py
coffee_shop/migrations/: 0001_initial.py
coffee_shop/repositories/: __init__.py  abstractrepository.py  consumerrepository.py  deliveryrepository.py  productrepository.py  producttyperepository.py  salesinforepository.py  salesperiodRepository.py  sliprepositories.py
coffee_shop/test/: test_factory.py
coffee_shop/tests/: read.py  test_factory.py
db/: entity.md  gemini_order.md  index.sql  schema.sql  schema_architect.md  view.sql
gemini_mart/: asgi.py  settings.py  sql_formatter.py  urls.py  wsgi.py
net/: Foward＿Redirect.md  Technical_Specification.md  Work_Procedure.md  atack.sh  host_only_adapter.sh  scale.md  test_network.sh  win.bat  wsl.sh
