[project]
name = "geminimart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "factory-boy>=3.3.3",
    "sqlparse>=0.5.5",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]
